2005-06-02 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Added a method to InputController to allow a command to
 be executed (programmatically) without making it into the history or messing
 up what the person is currently typing.

 Added support for // to escape normal command handling:
 //dev/hda is cool
 would send
 /dev/hda is cool
 to the channel.

 Fixed autoconnect commands for autoconnected servers.

 Fixed InputController's hold on ConnectionController when
 a ContentController is given a new ConnectionController

 Got rid of some used methods in ConnectionController pertaining to
 InputController

 Made InputController stop throwing things in the history.

 Added Favorites item to the server list that always stays on top.

 Added support for s// style tab completion

2005-06-01 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Topic inspector did not correctly update
 when someone else applied a new topic.  Fixed several memory leaks
 between interactions with ConnectionController and the ContentControllers.

 Should drop connections correctly when window is closed.  Added a default
 quit message preference and added to General preferences UI.  Added a dealloc
 routine for the StandardContentController class.  Fixed double initialization
 of the UI for QueryViewControllers and ChannelViewControllers.

2004-01-12 Andy Ruder <aeruder at ksu dot edu>
 * Manually applying various attributes to NSTextView subclasses
   since OS X doesn't support custom subclasses on them.
 * Added the emoticon bundle (thanks ludovic)
 * Fixed a memory leak in bundle setup
 * Fixed a weirdness on selection in bundle setup

2004-01-11 Andy Ruder <aeruder at ksu dot edu>
 * Added /ping, /topic to GNUstepOutput
 * Made /join not require the # on the channels
 * DCCSupport (finally) has support for using a specific range of ports and
   setting the block size.  A GNUstepOutput preferences panel was added.

2004-01-10 Andy Ruder <aeruder at ksu dot edu>