@@ -1,3 +1,8 @@
+2005-06-05 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput: Fixed history corruption when closing tab with /close.
+ Fixed notifications when removing tabs so that new selection is sent out
+ as well.
+
 2005-06-02 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: Added a method to InputController to allow a command to
  be executed (programmatically) without making it into the history or messing
